--- a/18th/package.json
+++ b/18th/package.json
@@ -6,7 +6,7 @@
     "main": "app.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "nodemon ./src/app.js",
+        "dev": "npx nodemon ./src/app.js",
         "start": "node ./src/app.js"
     },
     "keywords": [],
@@ -14,21 +14,26 @@
     "license": "ISC",
     "dependencies": {
         "bcrypt": "^5.1.1",
+        "chai": "^5.1.1",
         "connect-mongo": "^5.1.0",
         "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^5.0.0",
         "express-compression": "^1.0.2",
         "express-session": "^1.18.0",
         "express-validator": "^7.1.0",
         "jsonwebtoken": "^9.0.2",
+        "mocha": "^10.7.3",
         "mongoose": "^8.4.0",
         "mongoose-paginate-v2": "^1.8.1",
+        "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.9.14",
         "passport": "^0.7.0",
         "passport-google-oauth20": "^2.0.0",
         "passport-jwt": "^4.0.1",
         "passport-local": "^1.0.0",
+        "supertest": "^7.0.0",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.1",
         "winston": "^3.14.2"
